# server/docs/swagger.yaml
@@ -1,4 +1,23 @@
 definitions:
+  request.DBConnTest:
+    properties:
+      dbName:
+        type: string
+      dbPath:
+        type: string
+      dbType:
+        type: string
+      host:
+        type: string
+      password:
+        type: string
+      port:
+        type: string
+      template:
+        type: string
+      userName:
+        type: string
+    type: object
   request.InitDB:
     properties:
       adminPassword:
@@ -41,6 +60,15 @@ definitions:
     - adminPassword
     - dbName
     type: object
+  request.PingRedis:
+    properties:
+      addr:
+        type: string
+      db:
+        type: integer
+      password:
+        type: string
+    type: object
   response.Response:
     properties:
       code:
@@ -61,7 +89,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: 初始化用户数据库
+          description: 检查数据库是否需要初始化结果
           schema:
             allOf:
             - $ref: '#/definitions/response.Response'
@@ -72,7 +100,31 @@ paths:
                 msg:
                   type: string
               type: object
-      summary: 初始化用户数据库
+      summary: 检查数据库是否需要初始化
+      tags:
+      - SysInit
+  /init/db/ping:
+    post:
+      parameters:
+      - description: 数据库连接参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.DBConnTest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 连接成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 测试数据库连接
       tags:
       - SysInit
   /init/initdb:
@@ -97,6 +149,30 @@ paths:
                   type: string
               type: object
       summary: 初始化用户数据库
+      tags:
+      - SysInit
+  /init/redis/ping:
+    post:
+      parameters:
+      - description: Redis 连接参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.PingRedis'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 连接成功
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 测试 Redis 连接
       tags:
       - SysInit
 securityDefinitions:
